--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -2,6 +2,8 @@
 
 <h1>This is the campgrounds pages!</h1>
 
+<a href="/campgrounds/new">Add New Campground</a>
+
 <% campgrounds.forEach(function(campground){ %>
 	<div>
 		<h4><%= campground.name %></h4>
